@@ -53,7 +53,8 @@ LIBGNOMEPRINTUI_REQUIRED=2.1.9
 GNOME_VFS_REQUIRED=2.0.2
 GCONF_REQUIRED=1.1.9
 
-XML_REQUIRED=2.4.7
+LIBXML_REQUIRED=2.5.4
+LIBXSLT_REQUIRED=1.0.27
 LIBGSF_REQUIRED=1.4.0
 PYGTK_REQUIRED=1.99.14
 
@@ -68,7 +69,8 @@ AC_SUBST(LIBGNOMEPRINTUI_REQUIRED)
 AC_SUBST(GNOME_VFS_REQUIRED)
 AC_SUBST(GCONF_REQUIRED)
 
-AC_SUBST(XML_REQUIRED)
+AC_SUBST(LIBXML_REQUIRED)
+AC_SUBST(LIBXSLT_REQUIRED)
 AC_SUBST(LIBGSF_REQUIRED)
 AC_SUBST(PYGTK_REQUIRED)
 
@@ -123,7 +125,7 @@ dnl ================================
 PKG_CHECK_MODULES(LIBPLANNER,
 [
 	glib-2.0 >= $GLIB_REQUIRED
-	libxml-2.0 >= $XML_REQUIRED
+	libxml-2.0 >= $LIBXML_REQUIRED
 	gobject-2.0 gmodule-2.0
 	libgsf-1 >= $LIBGSF_REQUIRED
 	gnome-vfs-2.0 >= $GNOME_VFS_REQUIRED
@@ -148,7 +150,7 @@ dnl -----------------------------------------------------------
 dnl ================================
 dnl | HTML output file-module      |---------------------------
 dnl ================================
-PKG_CHECK_MODULES(XSLT, libxslt >= 1.0)
+PKG_CHECK_MODULES(XSLT, libxslt >= $LIBXSLT_REQUIRED)
 XSLT_LIBS="$XSLT_LIBS -lexslt"
 AC_SUBST(XSLT_CFLAGS)
 AC_SUBST(XSLT_LIBS)
